--- a/main.css
+++ b/main.css
@@ -22,6 +22,8 @@ h1 {
   -webkit-text-decoration: underline 10px;
           text-decoration: underline 10px;
   color: #7032c2;
+  width: 100%;
+  text-align: center;
 }
 
 main {
@@ -84,7 +86,7 @@ h3 {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.5);
 }
 .showPost .postCard {
   width: 70%;
@@ -96,7 +98,7 @@ h3 {
   padding: 20px;
   background: #fff;
   border-radius: 20px;
-  box-shadow: 4px 4px 10px black;
+  box-shadow: 0px 0px 40px 20px rgba(0, 0, 0, 0.3), 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -132,6 +134,7 @@ h3 {
   position: absolute;
   top: 50%;
   left: 50%;
+  pointer-events: none;
 }
 .showPost .postCard .close .line1 {
   transform: translate(-50%, -50%) rotate(45deg);
