--- a/main.scss
+++ b/main.scss
@@ -21,6 +21,8 @@ h1 {
     margin-bottom: 50px;
     text-decoration: underline 10px;
     color: #7032c2;
+    width: 100%;
+    text-align: center;
 }
 
 main {
@@ -88,7 +90,7 @@ h3 {
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(#000, .8);
+    background: rgba(#000, .5);
 
     .postCard {
         width: 70%;
@@ -101,7 +103,9 @@ h3 {
         padding: 20px;
         background: #fff;
         border-radius: 20px;
-        box-shadow: 4px 4px 10px rgba(#000, 1);
+        box-shadow: 
+        0px 0px 40px 20px rgba(#000, .3),
+        0px 0px 30px 10px rgba(#000, .3); 
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -139,6 +143,7 @@ h3 {
                 position: absolute;
                 top: 50%;
                 left: 50%;
+                pointer-events: none;
             }
             .line1 {
                 transform: translate(-50%, -50%) rotate(45deg);
